# agent-system-simulator

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_demo.py
.github/workflows/: ci.yml
docs/: how-this-connects.md
examples/: sample-output.md
src/: agents.py  controller.py  evaluation.py  scenarios.py
tests/: test_controller.py
